src/objects/SourceSystemInfo__mdt.object
<CustomObject>
    <fields>
        <fullName>Operation__c</fullName>
        <label>Operation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PUSH</fullName>
                    <default>true</default>
                    <label>PUSH</label>
                </value>
                <value>
                    <fullName>PULL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Record_Type__c</fullName>
        <label>Record Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_Data__c</fullName>
        <label>Request Data</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SystemNam__c</fullName>
        <label>SystemName</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>SourceSystemInfo</label>
    <pluralLabel>SourceSystemInfos</pluralLabel>
</CustomObject>